Added end points for a user to mark activities completed
